# arxiv-opportunity-finder

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  run_streaming_pipeline.py
data/: paper_queue.json
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/opportunities/: page.tsx
frontend/src/app/opportunities/[id]/: page.tsx
frontend/src/app/stats/: page.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/lib/: api.ts
scripts/: daily_run.py  run_enhanced_pipeline.py  run_openai_only.py  test_clients.py
src/: config.py  pipeline.py  streaming_pipeline.py
src/analyzer/: claude_client.py  main.py  openai_client.py  orchestrator.py
src/api/: app.py  main.py
src/database/: db.py  init_db.py  schema.sql  update_schema.py
src/scraper/: arxiv_client.py  base.py  main.py  paper_queue.py
src/ui/static/css/: styles.css
src/ui/static/js/: script.js
src/ui/templates/: index.html
